<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".Language">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/app_background">

            <ImageView
                android:id="@+id/backSecurity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Back"
                android:src="@drawable/ic_lessthan" />

            <TextView
                android:id="@+id/passHeader"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:paddingStart="80dp"
                android:text="@string/password_and_security_title"
                android:textColor="@color/app_text"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


            <TextView
                android:id="@+id/loginRecovery"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/login_and_recovery_title"
                android:textColor="@color/app_text"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/security_desc"
                android:textColor="@color/app_text"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@drawable/edit_text_border"
            android:padding="5dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/changeEmailBt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/app_text"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/change_email_label" />

            <TextView
                android:id="@+id/changePassBt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/app_text"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="50dp"
                android:text="@string/change_password_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:textSize="15sp"
                android:textColor="@color/app_text"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="100dp"
                android:text="@string/two_way_auth_label" />
        </FrameLayout>



    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>