<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_margin="40dp"
    android:background="@color/app_background"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email_label"
        android:textColor="@color/app_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="g***5@gmail.com"
        android:textColor="@color/app_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_linked_msg"
        android:textColor="#8E8E93"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button_green_bg"
        android:text="@string/change_email_label"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>