<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".changePass">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/app_background">



        <LinearLayout
            android:id="@+id/changePassbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/app_background">

            <ImageView
                android:id="@+id/backPass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Back"
                android:src="@drawable/ic_lessthan" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="@string/change_password_title"
                android:textColor="@color/app_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_title"
                    android:textColor="@color/app_text"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitle"
                    android:layout_marginTop="10dp"
                    android:text="@string/change_password_desc"
                    android:textColor="@color/app_text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/currenPass"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@id/tvDescription"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/current_password_hint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="15dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/newPass"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@id/currenPass"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/new_password_hint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="15dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/rePass"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@id/newPass"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/retype_password_hint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="15dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/ForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rePass"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password_link"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@id/ForgotPassword"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/primary_color"
                    android:text="@string/update_password_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>